src/App.scss
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;300;400&family=Poppins:wght@200;400;600&display=swap");

$primary-color: #ffffff;
$secondary-color: #000000;
$third-color: #868a8b;
$fourth-color: #494844;

html,
body {
  margin: 0;
  font-family: "Poppins", sans-serif;
}

.hero {
  background-color: $primary-color;
  height: 800px;
}

.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: $secondary-color;
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 15px;
  margin-bottom: 50px;
  .logo {
    width: 15%;
  }
  ul {
    display: flex;

    li {
      margin-right: 20px;
      list-style: none;
      padding: 5px;
      a {
        text-decoration: none;
        color: #000000;
        svg {
          height: 3em;
          width: 3em;
          :hover {
            color: yellow;
          }
        }
      }
    }
  }
}

@media only screen and (max-width: 1000px) {
 
  .navbar {
    padding-bottom: 5px;
    .logo {
      width: 50px;
    }
    ul {
      display: flex;
  
      li {
        margin-right: 10px;
        list-style: none;
       
        a {
          text-decoration: none;
          color: #000000;
          svg {
            height: 2em;
            width: 2em;
            :hover {
              color: yellow;
            }
          }
        }
      }
    }
    }
  }
    
  

.profile {
  display: flex;
  padding-top: 20px;
  color: $fourth-color;
  padding-left: 30px;
  padding-right: 30px;
  justify-content: center;
  align-items: center;
  .profileImg {
    width: 300px;
    height: 300px;
    object-fit: cover;
    object-position: 100% 10%;
    border-radius: 50%;
    margin: 30px;
    filter: grayscale(100%);
    & :hover {
      filter: none;
    }
  }
}
.intro-section {
  padding: 20px;
  margin: 30px;
  max-width: 300px;
  h1 {
    color: yellow;
    background-color: $third-color;
    padding: 1px 1px 1px 15px;
    &:hover {
      color: $third-color;
      background-color: yellow;
    }
  }
}

@media only screen and (max-width: 1000px) {
 .profile{
  flex-direction: column;
  padding-top: 0;
 }
 .intro-section{
  margin-top: -30px;
 }
    
  }

.skillSection {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: yellow;
  margin-top: 10px;
  padding-bottom: 175px;
}

.listedSkills {
  display: flex;
  justify-content: space-between;
  padding: 10px;
  width: 800px;;
  font-size: 25px;
  div {
    ul {
      li {
        &:hover {
          text-decoration: underline;
        }
      }
    }
  }
}

@media only screen and (max-width: 1000px) {
.listedSkills {
  display: flex;
 flex-wrap: wrap;
  justify-content: space-around;
  width: 100%;
  padding: 0;
}
    
  }
.project-section {
  margin-top: -150px;
  display: flex;
  justify-content: space-evenly;
  padding-bottom: 100px;
}

.header {
  grid-area: header;
}
.project1 {
  grid-area: project1;
}

.project2 {
  grid-area: project2;
}
.project-container {
  display: grid;
  grid-template-areas:
    "header header"
    "project1  project2";
  gap: 20px;
  border: $third-color solid;
  background-color: white;
  padding: 50px 100px;
  color: $third-color;
  text-align: center;

  h1 {
    margin: 0;
  }
}

@media only screen and (max-width: 1000px) {
 .project-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0;
 }
    
  }
.project-card {
  padding: 20px;
  box-shadow: 5px 5px 20px rgb(165, 162, 162);
  img {
    width: 300px;
    opacity: 1;
    height: auto;
    transition: 0.5s ease;
    backface-visibility: hidden;
  }
  &:hover .project-image {
    opacity: 0.3;
  }
  &:hover .project-link-container {
    opacity: 1;
  }
}

.project-link-container {
  transition: 0.5s ease;
  opacity: 0;
  transform: translate(50%, -250%);
  -ms-transform: translate(50%, -250%);
  text-align: center;
  max-width: 150px;
  .project-link {
    background-color: $secondary-color;
    color: $primary-color;
    padding: 15px 25px;
    cursor: pointer;
    font-family: "Poppins", sans-serif;
    font-weight: bold;
    &:hover {
      text-decoration: underline $primary-color;
    }
    a {
      text-decoration: none;
      color: $primary-color;
      &:hover {
        text-decoration: underline $primary-color;
      }
    }
  }
}

.modalContainer {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  
  .closeDiv {
    svg {
      height: 2em;
      width: 2em;
    }
  }
  .modalInfo {
    
    h3 {
      text-align: center;
    }
    .modalImages {
      
      border: solid none;
      display: flex;
      flex-wrap: wrap;
      justify-content: space-evenly;
      margin: 20px;
      padding-top: 20px;
      
      img{
        max-width: 450px;
        &:hover{
          transform: scale(1.3);
        }
      }
    }
  }
}

@media only screen and (max-width: 1000px) {
  .modalContainer {
 width: 100%;
 margin: 10px;
 .modalImages {
  img{
    width: 100%;
  }
 }
   }

  }

.footer {
  background-color: $secondary-color;
  color: $primary-color;
  height: 300px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  a {
    text-decoration: none;
    color: $third-color;
    &:hover {
      color: yellow;
    }
  }
}

@media only screen and (max-width: 1000px) {
 .footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 200px;
  div {

    display: flex;
    flex-direction: column;
  }
 }
    
  }

